<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ssin_toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ssin_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/ssin_app_name"
        style="@style/TextSize.ActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssin_toolbar" />

    <TextView
        android:id="@+id/ssin_label_1"
        style="@style/TextSize.ActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssin_app_name" />

    <LinearLayout
        android:id="@+id/ssin_email_linear"
        style="@style/LinearLayout.EditTextBackground"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssin_label_1">

        <EditText
            android:id="@+id/ssin_email"
            style="@style/EditText.Background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ent_email"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ssin_password_linear"
        style="@style/LinearLayout.EditTextBackground"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssin_email_linear">

        <EditText
            android:id="@+id/ssin_password"
            style="@style/EditText.Background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ent_password"
            android:imeOptions="actionNext"
            android:lines="1"
            android:password="true" />

        <ImageView
            android:id="@+id/ssin_show_password"
            style="@style/Icon.Activity"
            android:visibility="gone"
            app:srcCompat="@drawable/img_eye_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ssin_sign_in"
        style="@style/LinearLayout.ButtonBackground"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/ssin_password_linear"
        app:layout_constraintStart_toStartOf="@+id/ssin_password_linear"
        app:layout_constraintTop_toBottomOf="@+id/ssin_password_linear">

        <TextView
            android:id="@+id/ssin_btn_label"
            style="@style/TextSize.ButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <ProgressBar
            android:id="@+id/ssin_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/ssin_version"
        style="@style/TextSize.ActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v1.0"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>